--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,23 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп</title>
-    <link href="css/style.css" rel="stylesheet">
+	 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
-    <header class="second-header">
+  <body class="inner-page">
+    <header class="main-header">
       <div class="container clearfix">
-        <div class="main-logo">
-          <img src="img/logo.png" width="111" height="24"   alt="Barbershop">
-        </div>
-        <nav class="main-navigation next-page-navigation">
-          <ul class="main-navigation-list">
-            <li class="main-navigation-li"><a href="#">Информация</a></li>
-            <li class="main-navigation-li"><a href="#">Новости</a></li>
-            <li class="main-navigation-li"><a href="#">Прайс-лист</a></li>
-            <li class="main-navigation-li"><a href="#">Магазин</a></li>
-            <li class="main-navigation-li"><a href="#">Контакты</a></li>
-          </ul> 
+        <nav class="main-navigation">
+          <a class="logo-inner" href="index.html">
+            <img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+          </a>
+          <ul>
+            <li>
+              <a href="#">Информация</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li class="active">
+              <span>Прайс-лист</span>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
         </nav>
         <div class="user-block">
           <a class="login" href="#">Вход</a>
@@ -28,15 +39,21 @@
     </header>
     <main class="catalog-main">
      <div class="container clearfix">   
-				<h1 class="catalog-h1">Набор для путешествий «Baxter of California»</h1>
-				<nav class="breadcrumbs">
-					<ul class="breadcrumbs-list">
-						<li class="breadcrumbs-li"><a href="#">Главная</a></li>
-						<li class="breadcrumbs-li"><a href="#">Магазин</a></li>
-						<li class="breadcrumbs-li"><a href="#">Средства для ухода</a></li>
-						<li class="breadcrumbs-li"><a href="#">Набор для путешествий «Baxter of California»</a></li>
+			<div class="inner-page-title">
+					<h1>Набор для Путешествий "Baxter of California</h1>
+					<ul class="breadcrumbs">
+						<li>
+							<a href="index.html">Главная</a>
+						</li>
+						<li>
+							<a href="#">Магазин</a>
+						</li>
+						<li>
+						<a href="catalog.html">Средства для ухода</a>
+						</li>
+						<li class="current">Набор для Путешествий "Baxter of California</li>
 					</ul>
-				</nav>
+      	</div>
 				<div class="item-photos">
 					<div class="item-photo-big">
 						<img src="img/big-item-photo.jpg" width="460" height="498" alt="big-photo">
@@ -56,34 +73,34 @@
 						<p class="item-description-p">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
 						</p>
 						<div class="item-price">2900 руб.</div>
-						<a class="buy-btn" href="#">Купить</a>
+						<button class="btn">Купить</button>
 					</article>
 					<section class="item-kit">
 						<h2 class="catalog-item-h2">В набор входят:</h2>
-						<ul class="item-kit-list">
-								<li class="item-kit-li">Средство для умывания (50 мл)</li>
-								<li class="item-kit-li">Увлажняющий крем (50 мл)</li>
-								<li class="item-kit-li">Крем для бритья (50 мл)</li>
-								<li class="item-kit-li">Крем после бритья, шампунь (50 мл)</li>
-								<li class="item-kit-li">Удобная кожаная косметичка</li>
+						<ul>
+								<li>Средство для умывания (50 мл)</li>
+								<li>Увлажняющий крем (50 мл)</li>
+								<li>Крем для бритья (50 мл)</li>
+								<li>Крем после бритья, шампунь (50 мл)</li>
+								<li>Удобная кожаная косметичка</li>
 						</ul>
 					</section>
 				</div>
 			</div>     
     </main>
-    <footer class="main-footer">
+   <footer class="main-footer">
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (812) 666-02-66
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="16" alt=""></a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="12" height="21" alt=""></a>
-          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="21" height="21" alt=""></a>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
