--- a/catalog.html
+++ b/catalog.html
@@ -3,23 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский": Каталог</title>
-    <link href="css/style.css" rel="stylesheet">
+	  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
-    <header class="second-header">
+  <body class="inner-page">
+   <header class="main-header">
       <div class="container clearfix">
-        <div class="main-logo">
-          <img src="img/logo.png" width="111" height="24"   alt="Barbershop">
-        </div>
-        <nav class="main-navigation next-page-navigation">
-          <ul class="main-navigation-list">
-            <li class="main-navigation-li"><a href="#">Информация</a></li>
-            <li class="main-navigation-li"><a href="#">Новости</a></li>
-            <li class="main-navigation-li"><a href="#">Прайс-лист</a></li>
-            <li class="main-navigation-li"><a href="#">Магазин</a></li>
-            <li class="main-navigation-li"><a href="#">Контакты</a></li>
-          </ul> 
+        <nav class="main-navigation">
+          <a class="logo-inner" href="index.html">
+            <img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+          </a>
+          <ul>
+            <li>
+              <a href="#">Информация</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li class="active">
+              <span>Прайс-лист</span>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
         </nav>
         <div class="user-block">
           <a class="login" href="#">Вход</a>
@@ -28,14 +39,18 @@
     </header>
     <main class="catalog-main">
     	<div class="container">      
-				<h1 class="catalog-h1">Средства для ухода</h1>
-				<nav class="breadcrumbs">
-					<ul class="breadcrumbs-list">
-						<li class="breadcrumbs-li"><a href="#">Главная</a></li>
-						<li class="breadcrumbs-li"><a href="#">Магазин</a></li>
-						<li class="breadcrumbs-li"><a href="#">Средства для ухода</a></li>
+				<div class="inner-page-title">
+					<h1>Средства для ухода</h1>
+					<ul class="breadcrumbs">
+						<li>
+							<a href="index.html">Главная</a>
+						</li>
+						<li>
+							<a href="#">Магазин</a>
+						</li>
+						<li class="current">Средства для ухода</li>
 					</ul>
-				</nav>
+      	</div>
 				<div class="content clearfix">    
 					<div class="product-features">        
 						<form  action="" method="">        
@@ -73,7 +88,7 @@
 								<a href="">Набор для путешествий <span class="product-name">«Baxter of California»</span></a>
 							</h2>
 							<div class="item-price" href="#">2900 руб.</div>
-							<a class="buy-btn" href="#">Купить</a>
+							<button class="btn">Купить</button>
 						</div>
 						<div class="product-item">
 							<img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
@@ -81,7 +96,7 @@
 								<a href="">Увлажняющий кондиционер <span class="product-name">«Baxter of California»</span></a>
 							</h2>
 							<div class="item-price" href="#">750 руб.</div>
-							<a class="buy-btn" href="#">Купить</a>
+							<button class="btn">Купить</button>
 						</div> 
 						<div class="product-item">
 							<img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
@@ -89,7 +104,7 @@
 								<a href="">Гель для волос <span class="product-name">«SUAVECITO»</span></a>
 							</h2>
 							<div class="item-price" href="#">290 руб.</div>
-							<a class="buy-btn" href="#">Купить</a>
+							<button class="btn">Купить</button>
 						</div> 
 						<div class="product-item">
 							<img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
@@ -97,7 +112,7 @@
 								<a href="">Глина для укладки волос <span class="product-name">«American crew»</span></a>
 							</h2>
 							<div class="item-price" href="#">500 руб.</div>
-							<a class="buy-btn" href="#">Купить</a>
+							<button class="btn">Купить</button>
 						</div> 
 						<div class="product-item">
 							<img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
@@ -105,7 +120,7 @@
 								<a href="">Гель для волос <span class="product-name">«AMERICAN CREW»</span></a>
 							</h2>
 							<div class="item-price" href="#">300 руб.</div>
-							<a class="buy-btn" href="#">Купить</a>
+							<button class="btn">Купить</button>
 						</div> 
 						<div class="product-item">
 							<img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
@@ -113,7 +128,7 @@
 								<a href="">Набор для бритья <span class="product-name">«Baxter of California»</span></a>
 							</h2>
 							<div class="item-price" href="#">3900 руб.</div>
-							<a class="buy-btn" href="#">Купить</a>
+							<button class="btn">Купить</button>
 						</div> 
 						<div class="pagination">
 							<ul class="pagination-list">
@@ -127,19 +142,19 @@
 				</div>
 			</div>
     </main>
-    <footer class="main-footer">
+   <footer class="main-footer">
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (812) 666-02-66
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="16" alt=""></a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="12" height="22" alt=""></a>
-          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="21" height="21" alt=""></a>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
