--- a/catalog.html
+++ b/catalog.html
@@ -1,225 +1,229 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Барбершоп «Бородинский»: Каталог</title>
-	  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style-min.css">
-  </head>
-  <body class="inner-page">
-   <header class="main-header">
-      <div class="container clearfix">
-        <nav class="main-navigation">
-          <a class="logo-inner" href="index.html">
-            <img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
-          </a>
-          <ul>
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li>
-              <a href="#">Новости</a>
-            </li>
-            <li>
-              <a href="price.html">Прайс-лист</a>
-            </li>
-            <li class="active">
-              <span>Магазин</span>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-block">
-          <a class="login" href="#">Вход</a>
-        </div>
-      </div>
-    </header>
-    <main class="catalog-main">
-    	<div class="container">      
-				<div class="inner-page-title">
-					<h1>Средства для ухода</h1>
-					<ul class="breadcrumbs">
-						<li>
-							<a href="index.html">Главная</a>
-						</li>
-						<li>
-							<a href="#">Магазин</a>
-						</li>
-						<li class="current">Средства для ухода</li>
-					</ul>
-      	</div>
-				<div class="content clearfix">    
-					<div class="product-features">        
-						<form  action="" method="">        
-							<fieldset>
-								<legend>Производители:</legend>								
-								<label for="first-producer">
-									<a href="#">Baxter of California</a>
-									<input type="checkbox" id="first-producer" name="first-producer" checked disabled>
-									<span class="checkbox-indicator"></span>
-								</label>
-								<label for="second-producer">
-									<a href="#">Mr Natty</a>
-									<input type="checkbox" id="second-producer" name="second-producer">
-									<span class="checkbox-indicator"></span>
-								</label>
-								<label for="third-producer">
-									<a href="#">Suavecito</a>
-									<input type="checkbox" id="third-producer" name="third-producer" checked>
-									<span class="checkbox-indicator"></span>
-								</label>
-								<label for="fourth-producer">
-									<a href="#">Malin+Goetz</a>
-									<input type="checkbox" id="fourth-producer" name="fourth-producer">
-									<span class="checkbox-indicator"></span>
-								</label>
-								<label for="fifth-producer">
-									<a href="#">Murray's</a>
-									<input type="checkbox" id="fifth-producer" name="fifth-producer">
-									<span class="checkbox-indicator"></span>
-								</label>
-								<label for="sixth-producer">
-									<a href="#">American Crew</a>
-									<input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
-									<span class="checkbox-indicator"></span>
-								</label>
-							</fieldset>                              
-							<fieldset>       
-								<legend>Группы товаров:</legend>
-									<label for="first-group">
-										<a href="#">Бритвенные<br> принадлежности</a>
-										<input type="radio" id="first-group" name="groups" value="shaping accesories" checked>
-										<span class="radio-indicator"></span>
-									</label>
-									<label for="second-group">
-										<a href="#">Средства для ухода</a>
-										<input type="radio" id="second-group" name="groups" value="goods for the care">
-										<span class="radio-indicator"></span>
-									</label>
-									<label for="third-group">
-										<a href="#">Аксессуары</a>
-										<input type="radio" id="third-group" name="groups" value="accesories">
-										<span class="radio-indicator"></span>
-									</label>       
-							</fieldset>
-							<input class="btn" type="submit" value="Показать">						
-						</form>
-					</div>
-					<div class="products">
-						<div class="product-item">
-							<img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
-							<div class="product-item_container">
-								<h2 class="catalog-h2">
+
+<head>
+	<meta charset="utf-8">
+	<title>Барбершоп «Бородинский»: Каталог</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style-min.css">
+</head>
+
+<body class="inner-page">
+	<header class="main-header">
+		<div class="container clearfix">
+			<nav class="main-navigation">
+				<a class="logo-inner" href="index.html">
+					<img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+				</a>
+				<ul>
+					<li>
+						<a href="#">Информация</a>
+					</li>
+					<li>
+						<a href="#">Новости</a>
+					</li>
+					<li>
+						<a href="price.html">Прайс-лист</a>
+					</li>
+					<li class="active">
+						<span>Магазин</span>
+					</li>
+					<li>
+						<a href="#">Контакты</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="user-block">
+				<a class="login" href="#">Вход</a>
+			</div>
+		</div>
+	</header>
+	<main class="catalog-main">
+		<div class="container">
+			<div class="inner-page-title">
+				<h1>Средства для ухода</h1>
+				<ul class="breadcrumbs">
+					<li>
+						<a href="index.html">Главная</a>
+					</li>
+					<li>
+						<a href="#">Магазин</a>
+					</li>
+					<li class="current">Средства для ухода</li>
+				</ul>
+			</div>
+			<div class="content clearfix">
+				<div class="product-features">
+					<form action="" method="">
+						<fieldset>
+							<legend>Производители:</legend>
+							<label for="first-producer">
+								<a href="#">Baxter of California</a>
+								<input type="checkbox" id="first-producer" name="first-producer" checked disabled>
+								<span class="checkbox-indicator"></span>
+							</label>
+							<label for="second-producer">
+								<a href="#">Mr Natty</a>
+								<input type="checkbox" id="second-producer" name="second-producer">
+								<span class="checkbox-indicator"></span>
+							</label>
+							<label for="third-producer">
+								<a href="#">Suavecito</a>
+								<input type="checkbox" id="third-producer" name="third-producer" checked>
+								<span class="checkbox-indicator"></span>
+							</label>
+							<label for="fourth-producer">
+								<a href="#">Malin+Goetz</a>
+								<input type="checkbox" id="fourth-producer" name="fourth-producer">
+								<span class="checkbox-indicator"></span>
+							</label>
+							<label for="fifth-producer">
+								<a href="#">Murray's</a>
+								<input type="checkbox" id="fifth-producer" name="fifth-producer">
+								<span class="checkbox-indicator"></span>
+							</label>
+							<label for="sixth-producer">
+								<a href="#">American Crew</a>
+								<input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
+								<span class="checkbox-indicator"></span>
+							</label>
+						</fieldset>
+						<fieldset>
+							<legend>Группы товаров:</legend>
+							<label for="first-group">
+								<a href="#">Бритвенные<br> принадлежности</a>
+								<input type="radio" id="first-group" name="groups" value="shaping accesories" checked>
+								<span class="radio-indicator"></span>
+							</label>
+							<label for="second-group">
+								<a href="#">Средства для ухода</a>
+								<input type="radio" id="second-group" name="groups" value="goods for the care">
+								<span class="radio-indicator"></span>
+							</label>
+							<label for="third-group">
+								<a href="#">Аксессуары</a>
+								<input type="radio" id="third-group" name="groups" value="accesories">
+								<span class="radio-indicator"></span>
+							</label>
+						</fieldset>
+						<input class="btn" type="submit" value="Показать">
+					</form>
+				</div>
+				<div class="products">
+					<div class="product-item">
+						<img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
+						<div class="product-item_container">
+							<h2 class="catalog-h2">
 									<a href="catalog-item.html">Набор для путешествий<br>
 									 <span class="product-name">«Baxter of California»</span>
 									</a>
 								</h2>
-								<div class="item-price" href="#">2900 руб.</div>
-								<button class="btn">Купить</button>
-							</div>
+							<div class="item-price" href="#">2900 руб.</div>
+							<button class="btn">Купить</button>
 						</div>
-						<div class="product-item">
-							<img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
-							<div class="product-item_container">
-								<h2 class="catalog-h2">
+					</div>
+					<div class="product-item">
+						<img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
+						<div class="product-item_container">
+							<h2 class="catalog-h2">
 									<a href="">Увлажняющий кондиционер<br> 
 										<span class="product-name">«Baxter of California»</span>
 									</a>
 								</h2>
-								<div class="item-price" href="#">750 руб.</div>
-								<button class="btn">Купить</button>
-							</div>
-						</div> 
-						<div class="product-item">
-							<img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
-							<div class="product-item_container">
-								<h2 class="catalog-h2">
+							<div class="item-price" href="#">750 руб.</div>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="product-item">
+						<img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
+						<div class="product-item_container">
+							<h2 class="catalog-h2">
 									<a href="">Гель для волос<br>
 									 <span class="product-name">«SUAVECITO»</span>
 									</a>
 								</h2>
-								<div class="item-price" href="#">290 руб.</div>
-								<button class="btn">Купить</button>
-							</div>
-						</div> 
-						<div class="product-item">
-							<img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
-							<div class="product-item_container">
-								<h2 class="catalog-h2">
+							<div class="item-price" href="#">290 руб.</div>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="product-item">
+						<img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
+						<div class="product-item_container">
+							<h2 class="catalog-h2">
 									<a href="">Глина для укладки волос<br> 
 										<span class="product-name">«American crew»</span>
 									</a>
 								</h2>
-								<div class="item-price" href="#">500 руб.</div>
-								<button class="btn">Купить</button>
-							</div>
-						</div> 
-						<div class="product-item">
-							<img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
-							<div class="product-item_container">
-								<h2 class="catalog-h2">
+							<div class="item-price" href="#">500 руб.</div>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="product-item">
+						<img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
+						<div class="product-item_container">
+							<h2 class="catalog-h2">
 									<a href="">Гель для волос<br> 
 										<span class="product-name">«AMERICAN CREW»</span>
 									</a>
 								</h2>
-								<div class="item-price" href="#">300 руб.</div>
-								<button class="btn">Купить</button>
-							</div>
-						</div> 
-						<div class="product-item">
-							<img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
-							<div class="product-item_container">
-								<h2 class="catalog-h2">
+							<div class="item-price" href="#">300 руб.</div>
+							<button class="btn">Купить</button>
+						</div>
+					</div>
+					<div class="product-item">
+						<img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
+						<div class="product-item_container">
+							<h2 class="catalog-h2">
 									<a href="">Набор для бритья<br> 
 										<span class="product-name">«Baxter of California»</span>
 									</a>
 								</h2>
-								<div class="item-price" href="#">3900 руб.</div>
-								<button class="btn">Купить</button>
-							</div>
-						</div> 
-						<div class="pagination">
-							<ul>
-								<li>
-									<a href="#">1</a>
-								</li>
-								<li>
-									<a class="active-pg">2</a>
-								</li>
-								<li>
-									<a href="#">3</a>
-								</li>
-								<li>
-									<a href="#">4</a>
-								</li>
-							</ul>			
+							<div class="item-price" href="#">3900 руб.</div>
+							<button class="btn">Купить</button>
 						</div>
+					</div>
+					<div class="pagination">
+						<ul>
+							<li>
+								<a href="#">1</a>
+							</li>
+							<li>
+								<a class="active-pg">2</a>
+							</li>
+							<li>
+								<a href="#">3</a>
+							</li>
+							<li>
+								<a href="#">4</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
-    </main>
-   <footer class="main-footer">
-      <div class="container clearfix">
-        <section class="footer-contacts">
-          Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#">Как нас найти?</a><br>
-          Телефон: +7 (812) 666-02-66
-        </section>
-        <section class="footer-social">
-          <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-        </section>
-        <section class="footer-copyright">
-          <p>Разработано:</p>
-          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-        </section>
-      </div>
-    </footer>
-  </body>
+		</div>
+	</main>
+	<footer class="main-footer">
+		<div class="container clearfix">
+			<section class="footer-contacts">
+				Барбершоп «Бородинский»
+				<br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
+				<br>
+				<a href="#">Как нас найти?</a>
+				<br> Телефон: +7 (812) 666-02-66
+			</section>
+			<section class="footer-social">
+				<p>Давайте дружить!</p>
+				<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+				<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+				<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+			</section>
+			<section class="footer-copyright">
+				<p>Разработано:</p>
+				<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+			</section>
+		</div>
+	</footer>
+</body>
+
 </html>
